styles have made a few drastic shifts for the better. stopping for the day

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -46,10 +46,38 @@ button{
   }
 }
 
+.select-ribbon{
+  width: 78%;
+}
+
+.gamelist-ribbon{
+  width: 85%;
+  height: 71px;
+  padding-bottom: 0px;
+  img{
+    height: 65px;
+    float: left;
+    max-width: 100px;
+  }
+  h3{
+    font-size: 1em;
+    float: right;
+    clear: right;
+    margin: 3px;
+    text-align: right;
+  }
+  aside{
+    font-size: 0.7em;
+    float: right;
+    clear: right;
+    margin: 3px;
+    text-align: right;
+  }
+}
+
 .right-ribbon{
   text-align: left;
   font-family: 'Libre Baskerville', serif;
-  max-width: 75%;
   padding-right: 5%;
   margin-bottom: 10px;
   border-top-left-radius: 5px;
@@ -70,9 +98,7 @@ button{
 }
 
 .left-ribbon{
-  text-align: right;
   font-family: 'Libre Baskerville', serif;
-  max-width: 75%;
   padding-left: 20%;
   margin-bottom: 10px;
   margin-left: -1px;
@@ -100,11 +126,9 @@ button{
 }
 
 .headersmall{
-  border-bottom: 4px solid #015C35;
   padding-top: 1%;
   padding-bottom: 1%;
   padding-left: 3%;
-  margin-bottom: 10px;
 }
 
 .logolarge{
@@ -160,14 +184,18 @@ button{
 
 .header-username{
   float: right;
-  font-size: 1.6em;
-  margin-top: 4.5%;
+  font-size: 1.5em;
   padding: 10px;
-  color: black;
+  padding-top: 25px;
+  padding-bottom: 15px;
+  margin-top: -5px;
   margin-right: 6%;
-  font-weight: bold;
-  text-shadow: #bfbfbf 5px 5px 25px;
-  -webkit-text-stroke: 1px black;
+  background-color: #015C35;
+  color: white;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  width: 40%;
+  text-align: center;
 }
 
 .logout-button{
@@ -195,9 +223,11 @@ button{
 .chooser-form{
   clear: both;
   margin: auto;
+  margin-bottom: 10px;
   width: 100%;
   padding-top: 12px;
   border-bottom: solid #015C35 5px;
+  border-top: solid #015C35 5px;
   label{
     font-size: 3em;
     padding-right: 10%;
@@ -319,18 +349,18 @@ button{
   padding-bottom: 8px;
   box-shadow: black 5px 5px 25px;
   h3{
-    font-size: 0.9em;
-    margin-left: 0%;
-    background-color: #015C35;
-    width: 54%;
-    padding: 8px;
-    padding-left: 8px;
-    padding-right: 12px;
-    color: white;
-    font-family: 'Libre Baskerville', serif;
-    border-bottom-right-radius: 59px;
-    float: left;
-    border-top-left-radius: 5px;
+    // font-size: 0.9em;
+    // margin-left: 0%;
+    // background-color: #015C35;
+    // width: 54%;
+    // padding: 8px;
+    // padding-left: 8px;
+    // padding-right: 12px;
+    // color: white;
+    // font-family: 'Libre Baskerville', serif;
+    // border-bottom-right-radius: 59px;
+    // float: left;
+    // border-top-left-radius: 5px;
   }
   input{
     display: block;
@@ -368,22 +398,22 @@ button{
     box-shadow: #bfbfbf 5px 5px 25px;
   }
   li{
-    background-color: #015C35;
-    color: white;
-    width: 90%;
-    height: 71px;
-    float: right;
-    padding: 6px;
-    padding-bottom: 0px;
-    margin-bottom: 9px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    box-shadow: #bfbfbf 5px 5px 25px;
+    // background-color: #015C35;
+    // color: white;
+    // width: 90%;
+    // height: 71px;
+    // float: right;
+    // padding: 6px;
+    // padding-bottom: 0px;
+    // margin-bottom: 9px;
+    // border-top-left-radius: 5px;
+    // border-bottom-left-radius: 5px;
+    // box-shadow: #bfbfbf 5px 5px 25px;
   }
   img{
-    height: 65px;
-    float: left;
-    max-width: 100px;
+    // height: 65px;
+    // float: left;
+    // max-width: 100px;
   }
   .aside-wrapper{
     width: 60%;
@@ -391,27 +421,27 @@ button{
     height: 90%;
   }
   aside{
-    font-size: 1em;
-    float: right;
-    clear: right;
-    margin: 3px;
-    text-align: right;
+    // font-size: 1em;
+    // float: right;
+    // clear: right;
+    // margin: 3px;
+    // text-align: right;
   }
   .add-games-popup-message{
-    display: block;
-    float: none;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    text-align: left;
-    font-size: 0.75em;
-    padding: 11px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    box-shadow: #bfbfbf 5px 5px 25px;
-    clear: both;
+    // display: block;
+    // float: none;
+    // border-top-right-radius: 5px;
+    // border-bottom-right-radius: 5px;
+    // border-top-left-radius: 0px;
+    // border-bottom-left-radius: 0px;
+    // text-align: left;
+    // font-size: 0.75em;
+    // padding: 11px;
+    // padding-left: 15px;
+    // padding-right: 15px;
+    // margin-bottom: 20px;
+    // margin-top: 20px;
+    // box-shadow: #bfbfbf 5px 5px 25px;
+    // clear: both;
   }
 }
